--- a/Razzle/Razzle/Web.config
+++ b/Razzle/Razzle/Web.config
@@ -27,6 +27,9 @@
 			<path>~/app_data/</path>
 			<assemblies>
 				<assembly name="Razzle.Sample" namespace="Razzle.Sample" />
+				<assembly name="Managed.AndroidDebugBridge" namespace="Managed.Adb" />
+				<assembly name="Camalot.Common" namespace="Camalot.Common" />
+				<assembly name="Camalot.Common.Mvc" namespace="Camalot.Common.Mvc" />
 			</assemblies>
 			<ignores>
 				<namespace>Razzle.Sample.Foo</namespace>
@@ -130,6 +133,8 @@
 			<remove name="TRACEVerbHandler" />
 			<add name="Documentation-Integrated-4.0" path="documentation/index/*" verb="GET,HEAD" type="System.Web.Handlers.TransferRequestHandler" preCondition="runtimeVersionv4.0" />
 			<add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+			<add name="Robots-ISAPI-Integrated-4.0" path="/robots.txt" verb="GET" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" resourceType="Unspecified" />
 		</handlers>
+		<modules runAllManagedModulesForAllRequests="true"></modules>
 	</system.webServer>
 </configuration>
