Fixed extensions to not show the extension object as the first parameter.

--- a/Razzle/Razzle/Web.config
+++ b/Razzle/Razzle/Web.config
@@ -26,7 +26,7 @@
 		<documentation>
 			<path>~/app_data/</path>
 			<assemblies>
-				<assembly name="Razzle.Sample" namespace="Razzle.Sample" />
+				<!--<assembly name="Razzle.Sample" namespace="Razzle.Sample" />-->
 				<assembly name="Managed.AndroidDebugBridge" namespace="Managed.Adb" />
 				<assembly name="Camalot.Common" namespace="Camalot.Common" />
 				<assembly name="Camalot.Common.Mvc" namespace="Camalot.Common.Mvc" />
